--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -312,6 +312,32 @@ jobs:
 
   # GitHub does not have a way of requiring that all checks pass (you must manually select each job)
   # This action at least lets us manage the list of required tests via source control
+  pr-review-action-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Cache PR review action node modules
+        uses: actions/cache@v4
+        id: pr-review-cache
+        with:
+          path: pr-review-action/scripts/node_modules
+          key: ${{ runner.os }}-pr-review-action-${{ hashFiles('pr-review-action/scripts/package.json') }}
+
+      - name: Install dependencies
+        if: steps.pr-review-cache.outputs.cache-hit != 'true'
+        run: |
+          cd pr-review-action/scripts
+          npm install
+
+      - name: Run tests
+        run: |
+          cd pr-review-action/scripts
+          npm test
+
   # so that creators of new jobs can add them to this list
   require-all-checks-to-pass:
     if: always()
@@ -328,6 +354,7 @@ jobs:
       - vscode-package-extension-linux
       - vscode-e2e-tests
       - jetbrains-tests
+      - pr-review-action-tests
 
     steps:
       - name: Decide whether the needed jobs succeeded or failed
