--- a/.github/workflows/continue-general-review.yaml
+++ b/.github/workflows/continue-general-review.yaml
@@ -18,8 +18,8 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Run Continue PR Review Action
-        uses: continuedev/continue/actions/general-review@17fe39cc4f1760838ce4428aad0a984af13f8266
+        uses: continuedev/continue/actions/general-review@23d9260536372acf4eb57a41e6ab62bc5869b070
         with:
           continue-api-key: ${{ secrets.CONTINUE_API_KEY }}
-          continue-org: 'continuedev'
-          continue-config: 'continuedev/review-bot'
+          continue-org: "continuedev"
+          continue-config: "continuedev/review-bot"
