--- a/.github/actions/build-vscode-extension/action.yml
+++ b/.github/actions/build-vscode-extension/action.yml
@@ -105,7 +105,7 @@ runs:
       shell: bash
       run: |
         cd gui
-        npm run build
+        npm run build --max-old-space-size=4096
 
     - name: Prepackage the extension
       shell: bash
