fix: set flag as node options

--- a/.github/actions/build-vscode-extension/action.yml
+++ b/.github/actions/build-vscode-extension/action.yml
@@ -106,6 +106,8 @@ runs:
       run: |
         cd gui
         npm run build --max-old-space-size=4096
+      env:
+        NODE_OPTIONS: "--max-old-space-size=4096"
 
     - name: Prepackage the extension
       shell: bash
