fix: next edit renders that should render decorations will render them properly (#7160)
* fix: passing next edit requests will render things

* chore: remove comment

* feat: skip whitespace only deletions

* feat: add a utility function for checking if a diff is a whitespace only deletion

* feat: add test for next edit utils

* feat: move filtering to NextEditProvider

* fix: escape newline properly

* feat: make jump decoration more visible

* feat: remove redundant escapes

* fix: undo the escapeSVG

* fix: update tests

* fix: use proper line heights

* fix: place the SVG at the end of the line

* fix: handle cases where the completion is a single line

* feat: improve next edit UI (#7167)

* fix: use proper line heights

* fix: place the SVG at the end of the line

* fix: handle cases where the completion is a single line

* fix: allocate more memory for the GUI build step

* fix: set flag as node options

* fix: jump scrolls only after accepting

* fix: update jump manager vitest

--- a/.github/actions/build-vscode-extension/action.yml
+++ b/.github/actions/build-vscode-extension/action.yml
@@ -105,7 +105,9 @@ runs:
       shell: bash
       run: |
         cd gui
-        npm run build
+        npm run build --max-old-space-size=4096
+      env:
+        NODE_OPTIONS: "--max-old-space-size=4096"
 
     - name: Prepackage the extension
       shell: bash
