--- a/.github/workflows/main-build.yaml
+++ b/.github/workflows/main-build.yaml
@@ -4,7 +4,7 @@ name: Main Branch Build
 on:
   push:
     branches:
-      - pe/fix-oneper
+      - main
   workflow_dispatch:
     inputs:
       test_pr_number:
