--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -110,6 +110,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+      - vscode-e2e-tests
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -135,10 +136,23 @@ jobs:
           token: ${{ secrets.CI_GITHUB_TOKEN }}
           repository: continuedev/continue
 
+  vscode-e2e-tests:
+    needs: check_release_name
+    if: needs.check_release_name.outputs.should_run == 'true' || github.event_name == 'workflow_dispatch'
+    uses: ./.github/workflows/e2e-tests.yml
+    with:
+      is_fork: false
+    secrets:
+      CI_GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GH_ACTIONS_SSH_TEST_KEY_PEM: ${{ secrets.GH_ACTIONS_SSH_TEST_KEY_PEM }}
+      GH_ACTIONS_SSH_TEST_DNS_NAME: ${{ secrets.GH_ACTIONS_SSH_TEST_DNS_NAME }}
+
   publish:
     runs-on: ubuntu-latest
     needs:
       - build
+      - vscode-e2e-tests
     if: github.event_name != 'workflow_dispatch' || github.event.inputs.publish_build == 'true'
     permissions:
       contents: write
