Add in_reply_to parameter to GitHub comment creation

--- a/.github/workflows/respond-to-cubic-dev-ai.yml
+++ b/.github/workflows/respond-to-cubic-dev-ai.yml
@@ -209,7 +209,8 @@ jobs:
               pull_number: ${{ github.event.pull_request.number }},
               body: commentBody,
               commit_id: '${{ github.event.pull_request.head.sha }}',
-              path: '${{ github.event.comment.path }}'
+              path: '${{ github.event.comment.path }}',
+              in_reply_to: ${{ github.event.comment.id }}
             };
 
             // Add line parameter only if it exists and is not null
