--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ extensions/intellij/.idea/**
 **/.idea/shelf/
 **/.idea/inspectionProfiles/Project_Default.xml
 **/.idea/php.xml
+**/.idea/kotlinc.xml
 
 
 extensions/intellij/bin
