feat: improve timestamps

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@workos-inc/node": "^7.45.0",
     "chalk": "^5.4.1",
     "commander": "^14.0.0",
+    "date-fns": "^4.1.0",
     "diff": "^7.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -89,6 +90,7 @@
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.2",
     "@testing-library/react": "^16.3.0",
+    "@types/date-fns": "^2.5.3",
     "@types/diff": "^7.0.2",
     "@types/express": "^5.0.3",
     "@types/glob": "^8.1.0",
